[metadata]
name = pinttrs
version = attr: pinttr.__version__
author = Vincent Leroy
maintainer = Vincent Leroy
license = MIT
url = https://github.com/leroyvn/pinttrs
description = Pint meets attrs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
# Abstract dependencies
install_requires =
    attrs
    pint

# Package discovery
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
include = *

# Extra deps
[options.extras_require]
tests =
    pytest
    pytest-cov
dev =
    black
    bump2version
    click
    conda-lock
    isort
    pip
    pip-tools
    ruamel.yaml
    setuptools
    twine
docs =
    sphinx>=3.1
    furo
    sphinx-copybutton
    sphinx-autodoc-typehints
